melhorar validações